# simple-opengl-renderer

./: .gitignore  CMakeLists.txt  ProgramUML.drawio  README.md  Untitled Diagram.drawio
MyFirstOpenGLApp/: Camera.cpp  Camera.hpp  Lights.hpp  Program.cpp  Program.hpp  Renderer.cpp  Renderer.hpp  ResourcesManager.cpp  ResourcesManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  main.cpp  stb_image.cpp
MyFirstOpenGLApp.xcodeproj/: project.pbxproj
MyFirstOpenGLApp/Objects/: Material.hpp  Mesh.hpp  Model.cpp  Model.hpp  Movable.cpp  Movable.hpp  Node.hpp  Object.cpp  Object.hpp  Utils.cpp  Utils.hpp  Vertex.hpp
MyFirstOpenGLApp/Shaders/: BlinnPhongFragment.glsl  fragmentShader.glsl  vertexShader.glsl
include/glad/: glad.h
shaders/: BlinnPhongFragment.glsl  hdrFragment.glsl  vertexShader.glsl
src/: Camera.cpp  Camera.hpp  Lights.cpp  Lights.hpp  Program.cpp  Program.hpp  Renderer.cpp  Renderer.hpp  ResourcesManager.cpp  ResourcesManager.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  glad.c  main.cpp
src/Objects/: Material.hpp  Mesh.hpp  Model.hpp  Node.hpp  Utils.cpp  Utils.hpp
